test/error/0004-tags4.c
/*
PATTERN: incomplete
PATTERN: c:12:
*/

int
main()
{
	{
		struct X {};
	}
	struct X x;
	return 0;
}
